--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,38 @@ html {
     font-family: helvetica, arial, sans-serif;
     font-size: 12px
 }
+
+.tooltip {
+    border: solid 1px #bdbdbd;
+    border-radius: 2px;
+    background-color: white;
+    -moz-box-shadow: 0px 2px 2px 0px rgba(204, 204, 204, 0.6);
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(204, 204, 204, 0.6);
+    box-shadow: 0px 2px 2px 0px rgba(204, 204, 204, 0.6);
+}
+
+.tooltip-title-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.tooltip-title {
+    padding: 0em 2em 0em 1em;
+    font-weight: bold;
+}
+
+.tooltip-separator {
+    height: 1px;
+    background-color: #dddddd;
+}
+
+.tooltip-entry-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0.5em 0em 0.5em 0em;
+}
+
+.tooltip-entry {
+    display: block;
+    padding: 0.5em 2em 0.5em 1em;
+}
